<resources>
    <string name="app_name">FindShirtSize</string>

    <string name="hello_world">Hello world!</string>
    <string name="input_measurements">Input Measurements</string>
    <string name="action_settings">Settings</string>

    <string name="button_camera">Take a Pic</string>
    <string name="button_input">Input</string>
    <string name="image_cd_camera">Description Here</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_input">InputActivity</string>

    <string name="chest_hint">Chest Size (in.)</string>
    <string name="waist_hint">Waist Size (in.)</string>
    <string name="hips_hint">Hips Size (in.)</string>
    <string name="ok">Get Fitted</string>

    <string name="your_true_fit">Your True Fit</string>
</resources>
