<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"

    android:orientation="vertical"
    >

    <TextView
        android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_camera"
        android:text="@string/button_camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <ImageView
        android:id="@+id/image_camera"
        android:contentDescription="@string/image_cd_camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
