<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bryan.findshirtsize.InputActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background2">
    </ImageView>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:text="@string/input_measurements" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:id="@+id/textView" />

        <!-- http://developer.android.com/guide/topics/ui/controls/text.html -->

        <EditText
            android:id="@+id/chest_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chest_hint"
            android:inputType="number"
            android:layout_below="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="114dp" />


        <EditText
            android:id="@+id/waist_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/waist_hint"
            android:inputType="number"
            android:layout_below="@+id/chest_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26dp" />


        <EditText
            android:id="@+id/hips_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hips_hint"
            android:inputType="number"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/waist_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_below="@+id/hips_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="67dp"
            android:id="@+id/button_fit"
            android:onClick="sendData"/>

    </RelativeLayout>
</FrameLayout>